--- a/demo/index.html
+++ b/demo/index.html
@@ -5,6 +5,10 @@
         <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" href="./noderrz.png" />
+        <link
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+            rel="stylesheet"
+        />
         <title>Noderrz Control Panel</title>
     </head>
     <body>
